# ketl_core

./: CMakeLists.txt
include/ketl/: assert.h  int_map.h  int_set.h  logging.h  object_pool.h  utils.h
include/ketl/compiler/: bytecode_compiler.h  syntax_node.h
src/: CMakeLists.txt  atomic_strings.c  int_map.c  int_set.c  logging.c  object_pool.c  stack.c
src/compiler/: bnf_parser.c  bnf_parser.h  bnf_scheme.c  bytecode_compiler.c  lexer.c  lexer.h  syntax_parser.c  syntax_parser.h  syntax_solver.c
tests/: main.cpp
